[tool.poetry]
name = "serval_app"
version = "0.1.0"
description = ""
authors = ["Eli Lowry <eli_lowry@sil.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.31.1"
requests = "^2.31.0"
SQLAlchemy = "^2.0.22"
pyarrow = "^14.0.1"
tornado = "^6.4.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
